--- a/my-app/src/screens/About.css
+++ b/my-app/src/screens/About.css
@@ -3,3 +3,11 @@
   font-size: 16px;
   margin: 20px;
 }
+
+#white-paper-btn {
+  background-color: rgb(50, 132, 255);
+  color: white;
+  border: 1px solid white;
+  border-radius: 4px;
+  font-size: 16px;
+}
