--- a/my-app/src/screens/Contact.css
+++ b/my-app/src/screens/Contact.css
@@ -6,3 +6,21 @@
 .logo {
   height: 20vmin;
 }
+
+#touch {
+  margin: 40px 20px 10px 20px;
+}
+
+#name {
+  margin: 10px 20px 20px 20px;
+}
+
+.social-btn {
+  background-color: rgb(50, 132, 255);
+  color: white;
+  border: 1px solid rgb(50, 132, 255);
+  border-radius: 4px;
+  font-size: 16px;
+  padding: 4px 6px;
+  margin: 2px;
+}
