--- a/my-app/src/screens/About.css
+++ b/my-app/src/screens/About.css
@@ -18,3 +18,11 @@
 #white-paper-btn:hover {
   background-color: rgb(112, 169, 254);
 }
+
+#principles,
+#one,
+#two,
+#three {
+  font-size: 20px;
+  margin: 5px;
+}
