--- a/my-app/src/layouts/Layout.css
+++ b/my-app/src/layouts/Layout.css
@@ -6,6 +6,23 @@
 
 main {
   flex: 1;
-  /* padding: 100px 20px 100px 20px; */
   margin: 20px;
+}
+
+.home-text {
+  word-break: break-word;
+  margin: 0px 4px;
+}
+
+@media only screen and (max-width: 700px) {
+  main {
+    margin: 10px 0px;
+  }
+  #name,
+  #token,
+  #address,
+  #wallet,
+  #info {
+    margin: 2px 0px;
+  }
 }
