--- a/my-app/src/screens/Home.css
+++ b/my-app/src/screens/Home.css
@@ -13,3 +13,14 @@
 #info {
   margin: 20px;
 }
+
+@media only screen and (max-width: 700px) {
+  #name,
+  #token,
+  #address,
+  #wallet,
+  #info {
+    margin: 16px 0px;
+    font-size: smaller;
+  }
+}
