--- a/my-app/src/screens/Home.css
+++ b/my-app/src/screens/Home.css
@@ -14,6 +14,16 @@
   margin: 20px;
 }
 
+.add-wallet {
+  display: flex;
+  justify-content: center;
+}
+
+#metamask-logo {
+  height: 18px;
+  width: 18px;
+}
+
 @media only screen and (max-width: 700px) {
   #name,
   #token,
@@ -28,4 +38,3 @@
     font-size: 10px;
   }
 }
-/* git test 2 */
